@@ -215,13 +215,16 @@ fe_new_window (struct session *sess, int focus)
 {
 	static gboolean loaded = FALSE;
 
-	gui.current_session = sess;
-	conversation_panel_add_session (CONVERSATION_PANEL (gui.conversation_panel), sess);
-	topic_label_set_topic (TOPIC_LABEL (gui.topic_label), sess, sess->topic);
+	if (focus) {
+		gui.current_session = sess;
+		topic_label_set_topic (TOPIC_LABEL (gui.topic_label), sess, sess->topic);
+	}
+
+	conversation_panel_add_session (CONVERSATION_PANEL (gui.conversation_panel), sess, (gboolean) focus);
 	if (sess->type == SESS_SERVER)
 		navigation_tree_create_new_network_entry (gui.server_tree, sess);
 	else if (sess->type == SESS_CHANNEL || sess->type == SESS_DIALOG)
-		navigation_tree_create_new_channel_entry (gui.server_tree, sess);
+		navigation_tree_create_new_channel_entry (gui.server_tree, sess, (gboolean) focus);
 #ifdef USE_PLUGIN
 	if (!(opt_noplugins || loaded)) {
 		loaded = TRUE;
